# adk-tool-search

./: .env.example  AGENTS.md  README.md  pyproject.toml
.drs/: context.md  drs.config.yaml
.github/workflows/: ci.yml  drs-pr-review.yml  publish.yml
adk_tool_search/: __init__.py  loader.py  registry.py
examples/: function_tools_demo.py  mcp_demo.py
tests/: conftest.py  test_loader.py  test_registry.py  test_search_quality.py
tests/llm/: conftest.py  test_inline_execution.py  test_search_and_use.py  test_search_edge_cases.py  test_tool_search_agent.py
